--- a/ANGULAR/src/app/app.component.html
+++ b/ANGULAR/src/app/app.component.html
@@ -26,7 +26,7 @@
   
       </mat-form-field>
   
-      <button mat-raised-button color="primary">Add a task</button>
+      <button mat-raised-button color="primary" (click)="addTaskForm()">Add a task</button>
   
     </div>
 
