--- a/ANGULAR/src/app/app.component.html
+++ b/ANGULAR/src/app/app.component.html
@@ -45,13 +45,21 @@
                 {{ item.description }}
               </mat-card-content>
             </mat-card-content>
+            <mat-card-content id="action">
+              <button  mat-button>
+                <img src="../assets/icon/icons8-trash-material-outlined/icons8-trash-48.png" alt="">
+              </button>
+              <button mat-button>
+                <img src="../assets/icon/icons8-stylo-ios-17-filled/icons8-stylo-50.png" alt="">
+              </button>
+            </mat-card-content>
             <mat-card-footer>
-                    <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-                    <img mat-card-avatar src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <img mat-card-avatar src="../assets/image/Snapchat-1265061611.jpg" alt="Photo of a Shiba Inu">
+                    <img mat-card-avatar src="../assets/image/Snapchat-1265061611.jpg" alt="Photo of a Shiba Inu">
+                    <img mat-card-avatar src="../assets/image/Snapchat-1265061611.jpg" alt="Photo of a Shiba Inu">
+                    <img mat-card-avatar src="../assets/image/Snapchat-1265061611.jpg" alt="Photo of a Shiba Inu">
+                    <img mat-card-avatar src="../assets/image/Snapchat-1265061611.jpg" alt="Photo of a Shiba Inu">
+                    <img mat-card-avatar src="../assets/image/Snapchat-1265061611.jpg" alt="Photo of a Shiba Inu">
             </mat-card-footer>
         </mat-card>
 
