la fonctionnalité pour suppression et mis à jour d'une tâche est déjà prête dans l'interface utilisateur

--- a/ANGULAR/src/app/app.component.html
+++ b/ANGULAR/src/app/app.component.html
@@ -47,10 +47,10 @@
             </mat-card-content>
             <mat-card-content id="action">
               <button  mat-button>
-                <img src="../assets/icon/icons8-trash-material-outlined/icons8-trash-48.png" alt="">
+                <img src="../assets/icon/icons8-trash-material-outlined/icons8-trash-48.png" alt="" (click)="deleteTask()">
               </button>
               <button mat-button>
-                <img src="../assets/icon/icons8-stylo-ios-17-filled/icons8-stylo-50.png" alt="">
+                <img src="../assets/icon/icons8-stylo-ios-17-filled/icons8-stylo-50.png" alt="" (click)="editTask()">
               </button>
             </mat-card-content>
             <mat-card-footer>
