--- a/ANGULAR/src/app/pop-up-edititng-task/pop-up-edititng-task.component.html
+++ b/ANGULAR/src/app/pop-up-edititng-task/pop-up-edititng-task.component.html
@@ -4,19 +4,19 @@
         <li>
             <mat-form-field>
                 <mat-label>Task title</mat-label>
-                <input matInput>
+                <input matInput value="Ask teacher">
             </mat-form-field>
         </li>
         <li>
             <mat-form-field>
                 <mat-label>Task description</mat-label>
-                <input matInput>
+                <input matInput value="Ask mister Fanilo what's the Restful architect. ">
             </mat-form-field>
         </li>
         <li>
             <mat-form-field>
                 <mat-label>Collaborators</mat-label>
-                <input matInput>
+                <input matInput value="IALY Francisco Raymond">
             </mat-form-field>
         </li>
     </ul>
